--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        @media screen and (max-width: 600px){
+            .formcont{
+                width:100%;
+            }
+        }
+    </style>
     <title>ToDo's List</title>
 </head>
 
@@ -28,7 +35,7 @@
     </div>
     <div class="h-100 w-50 d-block p-5 bg-light border rounded-3 container">
 
-        <div class="mb-3">
+        <div class="mb-3 formcont">
             <label for="todoTitle" class="form-label">Title</label>
             <input type="text" class="form-control" id="todoTitle" aria-describedby="todoTitle" required>
             <div id="title" class="form-text">We'll never share your Todo's with anyone else.</div>
