--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         @media screen and (max-width: 600px){
             .formcont{
                 width:100%;
+                margin: 0;
             }
         }
     </style>
