--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- <style>
-        @media screen and (max-width: 600px) {
-            .formCont {
-                display: block;
-                margin: auto;
-                padding: 0;
-            }
+    <style>
+        body {
+            background-image: url(/todoimage1.jpg);
+            content: " ";
+            z-index: -1;
         }
-    </style> -->
+
+        .todoTitleLogo {
+            background-color: aliceblue;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+    </style>
     <title>ToDo's List</title>
 </head>
 
@@ -25,12 +29,12 @@
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <span class="fs-4">ToDo's List</span>
+                <span class="fs-4 todoTitleLogo">ToDo's List</span>
             </a>
 
             <ul class="nav nav-pills">
                 <li class="nav-item mx-3"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item mx-3"><a href="#yourItems" class="nav-link">List</a></li>
+                <li class="nav-item mx-3"><a href="#yourItems" class="nav-link ">List</a></li>
 
             </ul>
         </header>
@@ -52,7 +56,7 @@
     </div>
     <div class="container items">
         <h2 class="text-center my-5 border-bottom" id="yourItems">Your Items</h2>
-        <table class="table table-striped">
+        <table class="table table-light table-striped">
             <thead>
                 <tr>
                     <th scope="col">S.no</th>
