--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         body {
-            background-image: url(/todoimage1.jpg);
+            background-image: url(todoimage1.jpg);
             content: " ";
             z-index: -1;
         }
